--- a/prototypes/nested-graphs.html
+++ b/prototypes/nested-graphs.html
@@ -18,6 +18,24 @@
 
     Question:
         Can we do force layout on stuff with nonzero width and height properties...?
+
+    OK, we have first, very rough prototype. Takes a lot for granted. Basically elides over a critical questions, which is:
+        how does a rect resize itself - based on the contents of its children? yes. and we have yet to determine the most efficient way to do this. but for now, that is the next step. use svg to compute a bounding box in element space and wrap the content. 
+
+        layout will center elements around a center point. If we fix this, then w/h is irrelevant. and we can set the rect bbox as needed... this should look like animation... should be pretty fluid...
+        we could either do that, or pause and change parameters of the layout engine. seems less efficient. better to generalize. 
+        so they float around 0,0 local coordinates center point. 
+
+        on every tick of the subgraph, then, we check the bbox of the group, and resize the rect.
+            however, this means that the rect cannot be inside of the group. fine (maybe). 
+
+        so:
+            1. change dom to use this structure.
+            2. listen - get bounding box on tick and reize the rect.  
+
+    Next question is:
+        how do we run the force algorithm so as to take into account the width/height of non-point elements?  
+
 -->
 <html>
   <head>
