Added support for deriving link distance. Works pretty well.

--- a/prototypes/nested-graphs.html
+++ b/prototypes/nested-graphs.html
@@ -36,6 +36,7 @@
     Next question is:
         how do we run the force algorithm so as to take into account the width/height of non-point elements?  
 
+    TODO: padding
 -->
 <html>
   <head>
