Added some basic edge routing to the treemap layout prototype, as well as support for basic states. Works pretty well.

--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -5,12 +5,18 @@
     <style type="text/css">
 
 rect {
-  fill: none;
-  stroke: #fff;
+  fill: white;
+  stroke: black;
 }
 
 text {
   font: 10px sans-serif;
+}
+
+path.transition {
+  fill: none;
+  stroke: black;
+  stroke-width: 1.5px;
 }
 
     </style>
