Added aspect ratio stuff, so now it scales correctly with screen size.

--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -4,6 +4,10 @@
     <script type="text/javascript" src="../d3.v2.js"></script>
     <style type="text/css">
 
+body {
+    margin : 0px;
+}
+
 rect {
   fill: white;
   stroke: black;
