Added styling to ortho components.

--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -8,7 +8,7 @@ body {
     margin : 0px;
 }
 
-rect {
+g.cell rect {
   fill: white;
   stroke: black;
 }
@@ -21,6 +21,10 @@ path.transition {
   fill: none;
   stroke: black;
   stroke-width: 1.5px;
+}
+
+g.orthogonalComponent rect {
+    stroke-dasharray : 0.25em 0.25em; 
 }
 
     </style>
