Added support for history state

--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -27,6 +27,10 @@ g.orthogonalComponent rect {
     stroke-dasharray : 0.25em 0.25em; 
 }
 
+g.history rect {
+    fill : #3399FF; 
+}
+
     </style>
   </head>
   <body>
