Improved edge labels.

--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -17,7 +17,7 @@ text {
   font: 10px sans-serif;
 }
 
-path.transition {
+path.transition,path.reverseTransition {
   fill: none;
   stroke: black;
   stroke-width: 1.5px;
