--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -2,40 +2,8 @@
   <head>
     <title>Force-Directed Layout</title>
     <script type="text/javascript" src="../d3.v2.js"></script>
-    <style type="text/css">
-
-body {
-    margin : 0px;
-}
-
-g.cell rect {
-  fill: white;
-  stroke: black;
-}
-
-text {
-  font: 10px sans-serif;
-}
-
-path.transition,path.reverseTransition {
-  fill: none;
-  stroke: black;
-  stroke-width: 1.5px;
-}
-
-g.orthogonalComponent rect {
-    stroke-dasharray : 0.25em 0.25em; 
-}
-
-g.history rect {
-    fill : #3399FF; 
-}
-
-g.initial rect {
-    stroke : #CC0099;
-}
-
-    </style>
+    <script type="text/javascript" src="../ScxmlViz.js"></script>
+    <link rel="stylesheet" href="../ScxmlViz.css"></link>
   </head>
   <body>
     <script type="text/javascript" src="treemap-layout.js"></script>
