--- a/prototypes/treemap-layout.html
+++ b/prototypes/treemap-layout.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Force-Directed Layout</title>
-    <script type="text/javascript" src="../d3.v2.js"></script>
+    <script type="text/javascript" src="../lib/d3/d3.v2.js"></script>
     <script type="text/javascript" src="../ScxmlViz.js"></script>
     <link rel="stylesheet" href="../ScxmlViz.css"></link>
   </head>
